# deeppoker

./: .gitignore  IMPLEMENTATION_DIFF.md  LICENSE  README.md  pyproject.toml  run.py
.cursor/rules/: version-management.mdc
.github/workflows/: publish.yml
client/static/js/: main.js
client/templates/: index.html
deeppoker/: __init__.py
deeppoker/agents/: __init__.py  base.py  random_agent.py
deeppoker/core/: __init__.py  card.py  game.py  hand.py  player.py  rules.py
deeppoker/server/: __init__.py  app.py  routes.py  schemas.py  websocket.py
tests/: conftest.py
tests/test_core/: __init__.py  test_card.py  test_edge_cases.py  test_game.py  test_hand.py  test_multiplayer.py  test_showdown.py  test_side_pots.py
