[project]
name = "deeppoker"
version = "0.1.0"
description = "DeepPoker R1 - A Texas Hold'em poker game engine with FastAPI WebSocket server and AI agent framework"
authors = [
    {name = "Ziyi", email = "ziyigogogo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["poker", "texasholdem", "holdem", "game", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
deeppoker = "deeppoker.server.app:main"

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "deeppoker"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
